# gazebo_tasks

./: README.md  loop_task.sh
cafe_table/: model.config  model.sdf  model.sdf~
cutting_lasagna/: cutting_lasagna.world
cutting_lasagna/plugins/: CMakeLists.txt  CMakeLists.txt~  cut.cc  factory_lasagna.cc  lasagna_collision.cc  measurer.cc
cutting_lasagna/plugins/msgs/: CMakeLists.txt  CMakeLists.txt~  lasagna_sensor.proto  measure_cut.proto  measure_scoop.proto~
cutting_lasagna/tool_cutting_lasagna/: model.config  tool.sdf
hammering_nail/: hammering_nail.world
hammering_nail/nail/: model.config  nail.sdf  nail.sdf~
hammering_nail/plugins/: CMakeLists.txt  hammer.cc  measure_nail_distance.cc  nail_collision.cc  world_iterate.cc
hammering_nail/plugins/msgs/: CMakeLists.txt  check_time.proto  check_time.proto~  nail_distance.proto  nail_sensor.proto
hammering_nail/tool_hammering_nail/: tool.dae  tool.sdf
lifting_pancake/: lifting_pancake.world
lifting_pancake/boxBack/: boxBack.sdf  boxBack.sdf~  model.config
lifting_pancake/boxBellow/: boxBellow.sdf  boxBellow.sdf~
lifting_pancake/boxFront/: boxFront.sdf  model.config
lifting_pancake/boxLeft/: boxLeft.sdf  boxLeft.sdf~  model.config
lifting_pancake/boxPancake/: boxPancake.sdf  boxPancake.sdf~  model.config  model.config~
lifting_pancake/boxRight/: boxRight.sdf  boxRight.sdf~  model.config
lifting_pancake/pancake/: model.config  model.config~  pancake.sdf  pancake.sdf~  pancake_.dae  pancake_SQ.dae
lifting_pancake/pancake_left/: model.config  pancake_big.dae  pancake_left.sdf
lifting_pancake/pancake_right/: model.config  pancake.dae  pancake_right.dae  pancake_right.sdf  pancake_small.dae
lifting_pancake/plugins/: CMakeLists.txt  Matrix.h  bestfit.cpp  factory_pancake.cc  float_math.h  lift.cc  measure_pancake_particles.cc  pancake_collision.cc
lifting_pancake/plugins/msgs/: CMakeLists.txt  measure_pancake.proto  measure_pancake.proto~  pancake_sensor.proto  pancake_stuck.proto
rolling_dough/: rolling_dough.world
rolling_dough/end_box/: end_box.sdf  end_box.sdf~  model.config  model.config~
rolling_dough/plugins/: CMakeLists.txt  SVD.h  bestfit.h  dough_collision.cc.cpp  end_collision.cc.cpp  factory_dough.cc.cpp  float_math.cpp  measure_dough_variance.cc.cpp  roll.cc.cpp
rolling_dough/plugins/msgs/: CMakeLists.txt  CMakeLists.txt~  dough_sensor.proto  dough_stuck.proto  dough_variance.proto  dough_variance.proto~  end_sensor.proto  end_sensor.proto~
rolling_dough/tool_rolling_dough/: tool.sdf  tool.sdf~
scooping_grains/: scooping_grains.world
scooping_grains/box_grains/: box_grains.sdf  end_box.sdf~  model.config
scooping_grains/plugins/: CMakeLists.txt  CMakeLists.txt~  factory_grains.cc  grain_collision.cc  measurer_scooping_grains.cc  scoop.cc
scooping_grains/plugins/msgs/: CMakeLists.txt  CMakeLists.txt~  grain_sensor.proto  grain_sensor.proto~  measure_scoop.proto  measure_scoop.proto~
scooping_grains/tool_scooping_grains/: tool.dae  tool.sdf
